Add department operation log