@@ -2,13 +2,21 @@ package cloud.xcan.angus.core.gm.application.cmd.tag.impl;
 
 import static cloud.xcan.angus.core.gm.application.converter.DeptTagConverter.toDeptTagTarget;
 import static cloud.xcan.angus.core.gm.application.converter.GroupTagConverter.toGroupTagTarget;
+import static cloud.xcan.angus.core.gm.domain.operation.OperationResourceType.APP;
+import static cloud.xcan.angus.core.gm.domain.operation.OperationResourceType.DEPT;
+import static cloud.xcan.angus.core.gm.domain.operation.OperationResourceType.GROUP;
+import static cloud.xcan.angus.core.gm.domain.operation.OperationResourceType.USER;
+import static cloud.xcan.angus.core.gm.domain.operation.OperationType.TARGET_TAG_DELETED;
+import static cloud.xcan.angus.core.gm.domain.operation.OperationType.TARGET_TAG_UPDATED;
 import static cloud.xcan.angus.core.utils.PrincipalContextUtils.getOptTenantId;
 import static cloud.xcan.angus.spec.utils.ObjectUtils.isNotEmpty;
 import static java.util.Collections.singleton;
 
+import cloud.xcan.angus.api.commonlink.app.tag.WebTag;
 import cloud.xcan.angus.api.commonlink.dept.Dept;
 import cloud.xcan.angus.api.commonlink.group.Group;
 import cloud.xcan.angus.api.commonlink.setting.quota.QuotaResource;
+import cloud.xcan.angus.api.commonlink.tag.OrgTag;
 import cloud.xcan.angus.api.commonlink.tag.OrgTagTarget;
 import cloud.xcan.angus.api.commonlink.tag.OrgTagTargetRepo;
 import cloud.xcan.angus.api.commonlink.tag.OrgTargetType;
@@ -17,6 +25,7 @@ import cloud.xcan.angus.api.manager.SettingTenantQuotaManager;
 import cloud.xcan.angus.core.biz.Biz;
 import cloud.xcan.angus.core.biz.BizTemplate;
 import cloud.xcan.angus.core.biz.cmd.CommCmd;
+import cloud.xcan.angus.core.gm.application.cmd.operation.OperationLogCmd;
 import cloud.xcan.angus.core.gm.application.cmd.tag.OrgTagTargetCmd;
 import cloud.xcan.angus.core.gm.application.converter.UserTagConverter;
 import cloud.xcan.angus.core.gm.application.query.dept.DeptQuery;
@@ -62,26 +71,40 @@ public class OrgTagTargetCmdImpl extends CommCmd<OrgTagTarget, Long> implements 
   @Resource
   private SettingTenantQuotaManager settingTenantQuotaManager;
 
+  @Resource
+  private OperationLogCmd operationLogCmd;
+
   @Transactional(rollbackFor = Exception.class)
   @Override
   public List<IdKey<Long, Object>> tagTargetAdd(Long tagId, List<OrgTagTarget> tagTargets) {
     return new BizTemplate<List<IdKey<Long, Object>>>() {
+      OrgTag tagDb;
+      List<User> userDb;
+      List<Dept> deptDb;
+      List<Group> groupDb;
+      Set<OrgTagTarget> newTagTargets;
+
       @Override
       protected void checkParams() {
-        orgTagQuery.checkAndFind(tagId);
+        // Check the tag existed
+        tagDb = orgTagQuery.checkAndFind(tagId);
+        // Check the tag targets existed
+        newTagTargets = new HashSet<>(tagTargets);
+        userDb = orgTagTargetQuery.checkUserAndDeduplication(newTagTargets, tagTargets, tagId);
+        deptDb = orgTagTargetQuery.checkDeptAndDeduplication(newTagTargets, tagTargets, tagId);
+        groupDb = orgTagTargetQuery.checkGroupAndDeduplication(newTagTargets, tagTargets, tagId);
         // Check the target tags quota
         orgTagTargetQuery.checkTargetAppendTagQuota(getOptTenantId(), tagTargets);
       }
 
       @Override
       protected List<IdKey<Long, Object>> process() {
-        Set<OrgTagTarget> newTagTargets = new HashSet<>(tagTargets);
-        checkUserAndDeduplication(newTagTargets, tagTargets, tagId);
-        checkDeptAndDeduplication(newTagTargets, tagTargets, tagId);
-        checkGroupAndDeduplication(newTagTargets, tagTargets, tagId);
-
         if (isNotEmpty(newTagTargets)) {
-          return batchInsert(newTagTargets);
+          List<IdKey<Long, Object>> idKeys = batchInsert(newTagTargets);
+          operationLogCmd.addAll(USER, userDb, TARGET_TAG_UPDATED, tagDb.getName());
+          operationLogCmd.addAll(DEPT, deptDb, TARGET_TAG_UPDATED, tagDb.getName());
+          operationLogCmd.addAll(GROUP, groupDb, TARGET_TAG_UPDATED, tagDb.getName());
+          return idKeys;
         }
         return null;
       }
@@ -92,14 +115,24 @@ public class OrgTagTargetCmdImpl extends CommCmd<OrgTagTarget, Long> implements 
   @Override
   public void tagTargetDelete(Long tagId, HashSet<Long> targetIds) {
     new BizTemplate<Void>() {
+      OrgTag tagDb;
+
       @Override
       protected void checkParams() {
-        orgTagQuery.checkAndFind(tagId);
+        // Check the tag existed
+        tagDb = orgTagQuery.checkAndFind(tagId);
       }
 
       @Override
       protected Void process() {
         orgTagTargetRepo.deleteByTagIdAndTargetIdIn(tagId, targetIds);
+
+        List<User> userDb = userQuery.findByIdIn(targetIds);
+        operationLogCmd.addAll(USER, userDb, TARGET_TAG_DELETED, tagDb.getName());
+        List<Dept> deptDb = deptQuery.findByIdIn(targetIds);
+        operationLogCmd.addAll(DEPT, deptDb, TARGET_TAG_DELETED, tagDb.getName());
+        List<Group> groupDb = groupQuery.findByIdIn(targetIds);
+        operationLogCmd.addAll(GROUP, groupDb, TARGET_TAG_DELETED, tagDb.getName());
         return null;
       }
     }.execute();
@@ -109,25 +142,33 @@ public class OrgTagTargetCmdImpl extends CommCmd<OrgTagTarget, Long> implements 
   @Override
   public List<IdKey<Long, Object>> userTagAdd(Long userId, LinkedHashSet<Long> tagIds) {
     return new BizTemplate<List<IdKey<Long, Object>>>() {
+      User userDb;
+      List<OrgTag> tagsDb;
 
       @Override
       protected void checkParams() {
-        userQuery.checkAndFind(userId);
-        orgTagQuery.checkAndFind(tagIds);
+        userDb = userQuery.checkAndFind(userId);
+        tagsDb = orgTagQuery.checkAndFind(tagIds);
       }
 
       @Override
       protected List<IdKey<Long, Object>> process() {
-        Set<OrgTagTarget> tagsDb = orgTagTargetRepo
+        Set<OrgTagTarget> tagTargetDb = orgTagTargetRepo
             .findByTagIdInAndTargetTypeAndTargetId(tagIds, OrgTargetType.USER, userId);
-        if (isNotEmpty(tagsDb)) {
-          tagIds.removeAll(tagsDb.stream().map(OrgTagTarget::getTagId).toList());
+        if (isNotEmpty(tagTargetDb)) {
+          tagIds.removeAll(tagTargetDb.stream().map(OrgTagTarget::getTagId).toList());
         }
+
         if (isNotEmpty(tagIds)) {
           orgTagTargetQuery.checkTargetAppendTagQuota(getOptTenantId(), tagIds.size(), userId);
 
-          batchInsert(tagIds.stream().map(x -> new OrgTagTarget().setTagId(x)
-              .setTargetType(OrgTargetType.USER).setTargetId(userId)).collect(Collectors.toList()));
+          batchInsert(tagIds.stream()
+              .map(x -> new OrgTagTarget().setTagId(x)
+                  .setTargetType(OrgTargetType.USER).setTargetId(userId))
+              .collect(Collectors.toList()));
+
+          operationLogCmd.add(USER, userDb, TARGET_TAG_UPDATED,
+              tagsDb.stream().map(OrgTag::getName).toList().toArray());
         }
         return null;
       }
@@ -167,14 +208,21 @@ public class OrgTagTargetCmdImpl extends CommCmd<OrgTagTarget, Long> implements 
   @Override
   public void userTagDelete(Long userId, HashSet<Long> tagIds) {
     new BizTemplate<Void>() {
+      User userDb;
+      List<OrgTag> tagsDb;
+
       @Override
       protected void checkParams() {
-        userQuery.checkAndFind(userId);
+        userDb = userQuery.checkAndFind(userId);
+        tagsDb = orgTagQuery.checkAndFind(tagIds);
       }
 
       @Override
       protected Void process() {
         orgTagTargetRepo.deleteByTagIdInAndTargetId(tagIds, userId);
+
+        operationLogCmd.add(APP, userDb, TARGET_TAG_DELETED,
+            tagsDb.stream().map(OrgTag::getName).toList().toArray());
         return null;
       }
     }.execute();
@@ -184,24 +232,33 @@ public class OrgTagTargetCmdImpl extends CommCmd<OrgTagTarget, Long> implements 
   @Override
   public List<IdKey<Long, Object>> deptTagAdd(Long deptId, LinkedHashSet<Long> tagIds) {
     return new BizTemplate<List<IdKey<Long, Object>>>() {
+      Dept deptDb;
+      List<OrgTag> tagsDb;
 
       @Override
       protected void checkParams() {
-        deptQuery.checkAndFind(deptId);
-        orgTagQuery.checkAndFind(tagIds);
+        deptDb = deptQuery.checkAndFind(deptId);
+        tagsDb = orgTagQuery.checkAndFind(tagIds);
       }
 
       @Override
       protected List<IdKey<Long, Object>> process() {
-        Set<OrgTagTarget> tagsDb = orgTagTargetRepo
+        Set<OrgTagTarget> tagTargetDb = orgTagTargetRepo
             .findByTagIdInAndTargetTypeAndTargetId(tagIds, OrgTargetType.DEPT, deptId);
-        if (isNotEmpty(tagsDb)) {
-          tagIds.removeAll(tagsDb.stream().map(OrgTagTarget::getTagId).toList());
+        if (isNotEmpty(tagTargetDb)) {
+          tagIds.removeAll(tagTargetDb.stream().map(OrgTagTarget::getTagId).toList());
         }
+
         if (isNotEmpty(tagIds)) {
           orgTagTargetQuery.checkTargetAppendTagQuota(getOptTenantId(), tagIds.size(), deptId);
-          batchInsert(tagIds.stream().map(x -> new OrgTagTarget().setTagId(x)
-              .setTargetType(OrgTargetType.DEPT).setTargetId(deptId)).collect(Collectors.toList()));
+
+          batchInsert(tagIds.stream()
+              .map(x -> new OrgTagTarget().setTagId(x).setTargetType(OrgTargetType.DEPT)
+                  .setTargetId(deptId))
+              .collect(Collectors.toList()));
+
+          operationLogCmd.add(DEPT, deptDb, TARGET_TAG_UPDATED,
+              tagsDb.stream().map(OrgTag::getName).toList().toArray());
         }
         return null;
       }
@@ -239,14 +296,21 @@ public class OrgTagTargetCmdImpl extends CommCmd<OrgTagTarget, Long> implements 
   @Override
   public void deptTagDelete(Long deptId, HashSet<Long> tagIds) {
     new BizTemplate<Void>() {
+      Dept deptDb;
+      List<OrgTag> tagsDb;
+
       @Override
       protected void checkParams() {
-        deptQuery.checkAndFind(deptId);
+        deptDb = deptQuery.checkAndFind(deptId);
+        tagsDb = orgTagQuery.checkAndFind(tagIds);
       }
 
       @Override
       protected Void process() {
         orgTagTargetRepo.deleteByTagIdInAndTargetId(tagIds, deptId);
+
+        operationLogCmd.add(DEPT, deptDb, TARGET_TAG_DELETED,
+            tagsDb.stream().map(OrgTag::getName).toList().toArray());
         return null;
       }
     }.execute();
@@ -256,25 +320,33 @@ public class OrgTagTargetCmdImpl extends CommCmd<OrgTagTarget, Long> implements 
   @Override
   public List<IdKey<Long, Object>> groupTagAdd(Long groupId, LinkedHashSet<Long> tagIds) {
     return new BizTemplate<List<IdKey<Long, Object>>>() {
+      Group groupDb;
+      List<OrgTag> tagsDb;
 
       @Override
       protected void checkParams() {
-        groupQuery.checkValidAndFind(groupId);
-        orgTagQuery.checkAndFind(tagIds);
+        groupDb = groupQuery.checkValidAndFind(groupId);
+        tagsDb = orgTagQuery.checkAndFind(tagIds);
       }
 
       @Override
       protected List<IdKey<Long, Object>> process() {
-        Set<OrgTagTarget> tagsDb = orgTagTargetRepo
+        Set<OrgTagTarget> tagTargetDb = orgTagTargetRepo
             .findByTagIdInAndTargetTypeAndTargetId(tagIds, OrgTargetType.GROUP, groupId);
-        if (isNotEmpty(tagsDb)) {
-          tagIds.removeAll(tagsDb.stream().map(OrgTagTarget::getTagId).toList());
+        if (isNotEmpty(tagTargetDb)) {
+          tagIds.removeAll(tagTargetDb.stream().map(OrgTagTarget::getTagId).toList());
         }
+
         if (isNotEmpty(tagIds)) {
           orgTagTargetQuery.checkTargetAppendTagQuota(getOptTenantId(), tagIds.size(), groupId);
-          batchInsert(tagIds.stream().map(x -> new OrgTagTarget().setTagId(x)
+
+          batchInsert(tagIds.stream()
+              .map(x -> new OrgTagTarget().setTagId(x)
                   .setTargetType(OrgTargetType.GROUP).setTargetId(groupId))
               .collect(Collectors.toList()));
+
+          operationLogCmd.add(GROUP, groupDb, TARGET_TAG_UPDATED,
+              tagsDb.stream().map(OrgTag::getName).toList().toArray());
         }
         return null;
       }
@@ -312,14 +384,21 @@ public class OrgTagTargetCmdImpl extends CommCmd<OrgTagTarget, Long> implements 
   @Override
   public void groupTagDelete(Long groupId, HashSet<Long> tagIds) {
     new BizTemplate<Void>() {
+      Group groupDb;
+      List<OrgTag> tagsDb;
+
       @Override
       protected void checkParams() {
-        groupQuery.checkValidAndFind(groupId);
+        groupDb = groupQuery.checkValidAndFind(groupId);
+        tagsDb = orgTagQuery.checkAndFind(tagIds);
       }
 
       @Override
       protected Void process() {
         orgTagTargetRepo.deleteByTagIdInAndTargetId(tagIds, groupId);
+
+        operationLogCmd.add(GROUP, groupDb, TARGET_TAG_DELETED,
+            tagsDb.stream().map(OrgTag::getName).toList().toArray());
         return null;
       }
     }.execute();
@@ -343,54 +422,6 @@ public class OrgTagTargetCmdImpl extends CommCmd<OrgTagTarget, Long> implements 
   @Override
   public void deleteAllByTenantId(Set<Long> tenantIds) {
     orgTagTargetRepo.deleteAllByTenantId(tenantIds);
-  }
-
-  private void checkUserAndDeduplication(Set<OrgTagTarget> newTagTargets,
-      List<OrgTagTarget> tagTargets, Long tagId) {
-    Set<OrgTagTarget> userTags = tagTargets.stream()
-        .filter(x -> x.getTargetType().equals(OrgTargetType.USER)).collect(Collectors.toSet());
-    if (isNotEmpty(userTags)) {
-      Set<Long> userIds = userTags.stream().map(OrgTagTarget::getTargetId)
-          .collect(Collectors.toSet());
-      userQuery.checkAndFind(userIds);
-      Set<OrgTagTarget> tagsDb = orgTagTargetRepo.findByTagIdAndTargetTypeAndTargetIdIn(
-          tagId, OrgTargetType.USER, userIds);
-      if (isNotEmpty(tagsDb)) {
-        newTagTargets.removeAll(tagsDb);
-      }
-    }
-  }
-
-  private void checkDeptAndDeduplication(Set<OrgTagTarget> newTagTargets,
-      List<OrgTagTarget> tagTargets, Long tagId) {
-    Set<OrgTagTarget> deptTags = tagTargets.stream()
-        .filter(x -> x.getTargetType().equals(OrgTargetType.DEPT)).collect(Collectors.toSet());
-    if (isNotEmpty(deptTags)) {
-      Set<Long> deptIds = deptTags.stream().map(OrgTagTarget::getTargetId)
-          .collect(Collectors.toSet());
-      deptQuery.checkAndFind(deptIds);
-      Set<OrgTagTarget> tagsDb = orgTagTargetRepo.findByTagIdAndTargetTypeAndTargetIdIn(
-          tagId, OrgTargetType.DEPT, deptIds);
-      if (isNotEmpty(tagsDb)) {
-        newTagTargets.removeAll(tagsDb);
-      }
-    }
-  }
-
-  private void checkGroupAndDeduplication(Set<OrgTagTarget> newTagTargets,
-      List<OrgTagTarget> tagTargets, Long tagId) {
-    Set<OrgTagTarget> groupTags = tagTargets.stream()
-        .filter(x -> x.getTargetType().equals(OrgTargetType.GROUP)).collect(Collectors.toSet());
-    if (isNotEmpty(groupTags)) {
-      Set<Long> groupIds = groupTags.stream().map(OrgTagTarget::getTargetId)
-          .collect(Collectors.toSet());
-      groupQuery.checkValidAndFind(groupIds);
-      Set<OrgTagTarget> tagsDb = orgTagTargetRepo.findByTagIdAndTargetTypeAndTargetIdIn(
-          tagId, OrgTargetType.GROUP, groupIds);
-      if (isNotEmpty(tagsDb)) {
-        newTagTargets.removeAll(tagsDb);
-      }
-    }
   }
 
   @Override
